pageSuccess added and corrected. RegisterButton fixed. scrollBar modified

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-track {
+  background: rgb(240, 240, 240);
+  border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(204, 175, 198);
+
+  border-radius: 100px;
+}
+
 .MuiFab-primary {
   background-color: #e5e5e5 !important;
   opacity: 0.7;
